--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,8 +21,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
         <activity
             android:name="com.jhy.getyunosjvmversion.MainActivity"
             android:label="@string/app_name" >
