--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <receiver android:name=".ScreenSaveOffReceiver">
+            <intent-filter>
+                <action android:name="ACTION_SCREEN_SAVER" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
