add service aidl

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jhy.getyunosjvmversion" 
-    android:sharedUserId="android.uid.system"
     android:persistent="true"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    
+    <!--  android:sharedUserId="android.uid.system" -->
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     
@@ -38,6 +40,12 @@
                 <action android:name="ACTION_SCREEN_SAVER" />
             </intent-filter>
         </receiver>
+        
+        <service android:name="com.jhy.getyunosjvmversion.aidl.GetVersionService">
+            <intent-filter>
+			    <action android:name="com.jhy.getyunosjvmversion.aidl.GetVersionService.action" />
+			</intent-filter>
+        </service>
     </application>
 
 </manifest>
