tcp server&client

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,9 @@
     
     <!--  android:sharedUserId="android.uid.system" -->
 
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.DUMP" />
+    
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -33,6 +36,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.jhy.getyunosjvmversion.Tcp">
         </activity>
         
         <receiver android:name=".ScreenSaveOffReceiver">
